Fixed: 404 on cart icon mobile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6718,7 +6718,7 @@ h6.post-title {
   -webkit-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
   transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
   -webkit-transform: translate(200px, 0);
-  transform: translate(200px, 0);
+  transform: translate(100%, 0);
   background-color: #ffffff;
   -webkit-box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.09);
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.09);
